--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,12 @@
   <string name="hint_web_site">مثال: karyar.ir</string>
   <string name="label_desc">معرفی</string>
 
-  <string name="sign_up_label">Sign Up</string>
-  <string name="log_in_label">Log In</string>
-  <string name="forgot_password">Forgot Password?</string>
-  <string name="password_hint">Password</string>
-  <string name="email_hint">Email</string>
-  <string name="confirm_hint">Confirm Password</string>
+  <string name="sign_up_label">ثبت نام</string>
+  <string name="log_in_label">ورود</string>
+  <string name="forgot_password">فراموشی رمز عبور؟</string>
+  <string name="password_hint">رمز عبور</string>
+  <string name="email_hint">ایمیل</string>
+  <string name="confirm_hint">تکرار رمز عبور</string>
   <string name="busy_people">Busy People</string>
+  <string name="mobile_hint">موبایل</string>
 </resources>
